# RomanStaticSG

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  example.txt  formatting.sh  linter.sh  pyproject.toml  romanSSGUtil.py  roman_ssg_util.py  roman_ssg_util_test.py  romanssg.py  setup.cfg  test.md
.github/workflows/: python-package-conda.yml
demo/: Silver Blaze.html  The Adventure of the Six Napoleans.html  The Adventure of the Speckled Band.html  The Naval Treaty.html  The Red Headed League.html  index.html
folderWithStuff/: example.txt  example1.txt  example2.txt
src/staticsg/: roman_ssg_util.py  romanssg.py
tests/: roman_ssg_util_test.py
