[metadata]
name = staticsg-rrezinkin
version = 1.0.0
author = Roman Rezinkin
author_email = roman.rezinkin@hotmail.com
description = This is a simple Static Site Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roman-rezinkin/RomanStaticSG
project_urls =
    Bug Tracker = https://github.com/roman-rezinkin/RomanStaticSG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src